# Weakly-Supervised-Representation-Learning-for-Cross-Ontology-Mapping

./: .gitignore  README.md  batch_results.csv  bert_trial.py  pyproject.toml  requirements.txt  tmp.csv
finetune_src/: analyze_trials.py  optuna_sapbert_ft.py
leonmap/: __init__.py  ablation.py  build_vdb.py  compare_vecs.py  config.py  config_loader.py  mapper.py  retrieve.py  sanity_checks.py  test_config.yaml  utils.py
leonmap.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
vdb_src/: ablation.py  ablation2.py  ablation_faiss.py  build_vdb.py  compare_vecs.py  config.py  demo.py  demo_retrieve.py  fetch.py  filter_chebi.py  filter_mesh.py  getdata.py  inspect_chebi.py  mapper.py  retrieve.py  sanity_checks.py  utils.py  wrapper.py
